@@ -82,6 +82,7 @@
                                            (:file "digest")
                                            (:file "groestl" :depends-on ("digest"))
                                            (:file "jh" :depends-on ("digest"))
+                                           (:file "kupyna" :depends-on ("digest"))
                                            (:file "md2" :depends-on ("digest"))
                                            (:file "md4" :depends-on ("digest"))
                                            (:file "md5" :depends-on ("digest"))
@@ -268,6 +269,8 @@
                                            (:test-vector-file "keccak-224")
                                            (:test-vector-file "keccak-256")
                                            (:test-vector-file "keccak-384")
+                                           (:test-vector-file "kupyna")
+                                           (:test-vector-file "kupyna-256")
                                            (:test-vector-file "md2")
                                            (:test-vector-file "md4")
                                            (:test-vector-file "md5")
