@@ -153,7 +153,8 @@
            #:blake2 #:blake2/384 #:blake2/256 #:blake2/160
            #:blake2s #:blake2s/224 #:blake2s/160 #:blake2s/128
            #:jh #:jh/384 #:jh/256 #:jh/224
-           #:streebog #:streebog/256)
+           #:streebog #:streebog/256
+           #:kupyna #:kupyna/256)
   ;; supported macs
   (:export #:blake2-mac #:blake2s-mac #:cmac #:hmac #:poly1305 #:skein-mac
            #:gmac)
